# gr-isdbt

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  README.md  TODO.txt  volk_config
.conda/: README.md
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.isdbt
examples/: demo_2k_cp132.grc  demo_2k_cp14.grc  demo_4k_cp132.grc  demo_4k_cp18.grc  demo_8k_cp18.grc  full_transceiver.grc  fullseg_receiver_and_measurements.grc  fullseg_receiver_and_measurements.py  obtaining_parameters.grc  obtaining_the_parameters.grc  rx_1seg_demo.grc  rx_demo.grc  rx_demo.py  sym_align_ofdm.grc  tests.grc  tests_tx.grc  trace_valgrind.txt  tx_demo.grc  tx_demo_13seg.grc  viewing_the_constellation.grc  viewing_the_constellation.py
grc/: CMakeLists.txt  isdbt_bit_deinterleaver.block.yml  isdbt_bit_deinterleaver.xml  isdbt_bit_deinterleaver_1seg.xml  isdbt_bit_deinterleaver_streamed.xml  isdbt_byte_deinterleaver.block.yml  isdbt_byte_deinterleaver.xml  isdbt_byte_deinterleaver_1seg.xml  isdbt_byte_interleaver.block.yml  isdbt_byte_interleaver.xml  isdbt_carrier_modulation.block.yml  isdbt_carrier_modulation.xml  isdbt_energy_descrambler.block.yml  isdbt_energy_descrambler.xml  isdbt_energy_descrambler_1seg.xml  isdbt_energy_dispersal.block.yml  isdbt_energy_dispersal.xml  isdbt_frequency_deinterleaver.block.yml  isdbt_frequency_deinterleaver.xml  isdbt_frequency_deinterleaver_1seg.xml  isdbt_frequency_interleaver.block.yml  isdbt_frequency_interleaver.xml  isdbt_hierarchical_combinator.block.yml  isdbt_hierarchical_combinator.xml  isdbt_isdbt_channel_decoding.xml  isdbt_isdbt_channel_decoding.xml.bak  isdbt_isdbt_rf_channel_decoding.xml  isdbt_isdbt_rf_channel_decoding.xml.bak  isdbt_ofdm_sym_acquisition.xml  isdbt_ofdm_sym_acquisition_2.xml  isdbt_ofdm_sym_acquisition_dvbt.xml  isdbt_ofdm_synchronization.block.yml  isdbt_ofdm_synchronization.xml  isdbt_ofdm_synchronization_1seg.xml  isdbt_pilot_signals.block.yml  isdbt_pilot_signals.xml  isdbt_reed_solomon_dec_1seg.xml  isdbt_reed_solomon_dec_isdbt.block.yml  isdbt_reed_solomon_dec_isdbt.xml  isdbt_subset_of_carriers.block.yml  (+20 more)
include/isdbt/: CMakeLists.txt  api.h  bit_deinterleaver.h  bit_deinterleaver_1seg.h  bit_deinterleaver_streamed.h  byte_deinterleaver.h  byte_deinterleaver_1seg.h  byte_interleaver.h  carrier_modulation.h  energy_descrambler.h  energy_descrambler_1seg.h  energy_dispersal.h  frequency_deinterleaver.h  frequency_deinterleaver_1seg.h  frequency_interleaver.h  hierarchical_combinator.h  ofdm_sym_acquisition.h  ofdm_sym_acquisition_2.h  ofdm_sym_acquisition_dvbt.h  ofdm_synchronization.h  ofdm_synchronization_1seg.h  pilot_signals.h  reed_solomon.h  reed_solomon_dec_1seg.h  reed_solomon_dec_isdbt.h  subset_of_carriers.h  symbol_demapper.h  symbol_demapper_1seg.h  sync_and_channel_estimation.h  sync_and_channel_estimaton.h  time_deinterleaver.h  time_deinterleaver_1seg.h  time_interleaver.h  tmcc_decoder.h  tmcc_decoder_1seg.h  tmcc_encoder.h  viterbi_decoder.h  viterbi_decoder_1seg.h  viterbi_decoder_1seg_itpp.h
lib/: CMakeLists.txt  bit_deinterleaver_1seg_impl.cc  bit_deinterleaver_1seg_impl.h  bit_deinterleaver_impl.cc  bit_deinterleaver_impl.h  bit_deinterleaver_streamed_impl.cc  bit_deinterleaver_streamed_impl.h  byte_deinterleaver_1seg_impl.cc  byte_deinterleaver_1seg_impl.h  byte_deinterleaver_impl.cc  byte_deinterleaver_impl.h  byte_interleaver_impl.cc  byte_interleaver_impl.h  carrier_modulation_impl.cc  carrier_modulation_impl.h  d_viterbi.c  d_viterbi.h  energy_descrambler_1seg_impl.cc  energy_descrambler_1seg_impl.h  energy_descrambler_impl.cc  energy_descrambler_impl.h  energy_dispersal_impl.cc  energy_dispersal_impl.h  frequency_deinterleaver_1seg_impl.cc  frequency_deinterleaver_1seg_impl.h  frequency_deinterleaver_impl.cc  frequency_deinterleaver_impl.h  frequency_interleaver_impl.cc  frequency_interleaver_impl.h  hierarchical_combinator_impl.cc  hierarchical_combinator_impl.h  ofdm_sym_acquisition_2_impl.cc  ofdm_sym_acquisition_2_impl.h  ofdm_sym_acquisition_dvbt_impl.cc  ofdm_sym_acquisition_dvbt_impl.h  ofdm_sym_acquisition_impl.cc  ofdm_sym_acquisition_impl.h  ofdm_synchronization_1seg_impl.cc  ofdm_synchronization_1seg_impl.h  ofdm_synchronization_impl.cc  (+83 more)
python/: CMakeLists.txt  __init__.py  isdbt_channel_decoding.py  isdbt_channel_decoding.py.bak  isdbt_rf_channel_decoding.py  isdbt_rf_channel_decoding.py.bak  qa_bit_deinterleaver.py  qa_bit_deinterleaver_1seg.py  qa_bit_deinterleaver_streamed.py  qa_byte_deinterleaver.py  qa_byte_deinterleaver_1seg.py  qa_byte_interleaver.py  qa_carrier_modulation.py  qa_energy_descrambler.py  qa_energy_descrambler_1seg.py  qa_energy_dispersal.py  qa_frequency_deinterleaver.py  qa_frequency_deinterleaver_1seg.py  qa_frequency_interleaver.py  (+25 more)
python/isdbt/bindings/: CMakeLists.txt  bit_deinterleaver_python.cc  byte_deinterleaver_python.cc  byte_interleaver_python.cc  carrier_modulation_python.cc  energy_descrambler_python.cc  energy_dispersal_python.cc  frequency_deinterleaver_python.cc  frequency_interleaver_python.cc  hierarchical_combinator_python.cc  ofdm_synchronization_python.cc  pilot_signals_python.cc  python_bindings.cc  reed_solomon_dec_isdbt_python.cc  subset_of_carriers_python.cc  symbol_demapper_python.cc  time_deinterleaver_python.cc  time_interleaver_python.cc  tmcc_decoder_python.cc  tmcc_encoder_python.cc  viterbi_decoder_python.cc
python/isdbt/bindings/docstrings/: bit_deinterleaver_pydoc_template.h  byte_deinterleaver_pydoc_template.h  byte_interleaver_pydoc_template.h  carrier_modulation_pydoc_template.h  energy_descrambler_pydoc_template.h  energy_dispersal_pydoc_template.h  frequency_deinterleaver_pydoc_template.h  frequency_interleaver_pydoc_template.h  hierarchical_combinator_pydoc_template.h  ofdm_synchronization_pydoc_template.h  pilot_signals_pydoc_template.h  reed_solomon_dec_isdbt_pydoc_template.h  subset_of_carriers_pydoc_template.h  symbol_demapper_pydoc_template.h  time_deinterleaver_pydoc_template.h  time_interleaver_pydoc_template.h  tmcc_decoder_pydoc_template.h  tmcc_encoder_pydoc_template.h  viterbi_decoder_pydoc_template.h
(+59 files in other folders)
